lib/bait/tests/inout_error/loop/label_redefined.in.bt
outer := 5

outer: for true {
	break
}
